setupdb.sh - fixed the bug in postgis plugin that cause this to fail
Using GeoScript to draw footprints now.  Trying to be more memory effieciency
by scrolling throught the query results rather than creating large arrays in
memory.

Added scrollGeometries to raster/video search services.   It is the same as
getGeometries except that it returns a ScrollableResult rather than a List<Polygon>/List<Geometry>



git-svn-id: http://svn.osgeo.org/ossim/omar@17774 b630af17-092b-0410-afba-a002956477a4